# AnCloud

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  README.md  ROADMAP.md  bootstrap.cxx  macros.h
Components/: acApplicationCore.cxx  acApplicationCore.h  acComponentsInit.cxx  acComponentsInit.h  acMainWindow.cxx  acMainWindow.h  acMenuBuilders.cxx  acMenuBuilders.h  acSelectionAdaptor.cxx  acSelectionAdaptor.h
Components/Toolbars/: acCameraToolbar.cxx  acCameraToolbar.h  acMainToolbar.cxx  acMainToolbar.h  acSelectionToolbar.cxx  acSelectionToolbar.h
Components/Views/: acCameraToolbar.ui  acEditMenu.ui  acFileMenu.ui  acHelpMenu.ui  acMainToolbar.ui  acMainWindow.ui  acSelectionInfoWidget.ui  acSelectionToolbar.ui  acSelectionViewWidget.ui  acViewMenu.ui
Components/Widgets/: acLabelViewWidget.cxx  acLabelViewWidget.h  acSelectionBrowserWidget.cxx  acSelectionBrowserWidget.h  acSelectionInfoWidget.cxx  acSelectionInfoWidget.h  acSelectionModel.cxx  acSelectionModel.h  acSelectionViewWidget.cxx  acSelectionViewWidget.h
Core/: acSelectionManager.cxx  acSelectionManager.h  vtkPCDReader.cxx  vtkPCDReader.h  vtkPCDReaderRaw.cxx  vtkPCDReaderRaw.h
Plugins/Debug/: CMakeLists.txt  DebugPlugin.xml  plugin.cmake  vtkOutputDisplayerFilter.cxx  vtkOutputDisplayerFilter.h
Plugins/PCDReader/: CMakeLists.txt  PCDReader.xml  PCDReaderRaw.cpp  PCDReaderRaw.h  README.md  lzf.cpp  plugin.cmake  vtkGridPlaneSource.cxx  vtkGridPlaneSource.h  vtkPCDReader.cxx  vtkPCDReader.h
Plugins/SelectionExtension/: CMakeLists.txt  SelectionExtension.xml  plugin.cmake  vtkSelectionOperationFilter.cxx  vtkSelectionOperationFilter.h
Reactions/: acDeleteReaction.cxx  acDeleteReaction.h  acLoadDataReaction.cxx  acLoadDataReaction.h  acReaction.cxx  acReaction.h  acSaveDataReaction.cxx  acSaveDataReaction.h  acUndoRedoReaction.cxx  acUndoRedoReaction.h
Resources/: acIcons.qrc
Resources/Icons/: icons.qrc
